# dlc-stack

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: docker-build.yml
clients/: Cargo.toml
clients/src/: lib.rs
config/: asset_pair.json  secret.key
docker/: .env.template  Dockerfile  docker-compose.yml
it/: Cargo.toml  docker-compose.yml
it/devnet/: .gitignore  docker-compose.yml
it/devnet/containers/bitcoind-electrs/: Dockerfile
it/devnet/containers/bitcoind-electrs/conf/: bitcoind.conf
it/scripts/: start-apps.sh  stop-apps.sh
it/tests/: integration_tests.rs
it/tests/features/: basic.feature
oracle/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
oracle-discovery/: Cargo.toml  README.md
oracle-discovery/src/: main.rs  oracles.rs
oracle/src/: error.rs  lib.rs  main.rs
oracle/src/oracle/: error.rs  handler.rs  mod.rs  secret_key.rs  vault.rs
oracle/src/oracle/oracle_queryable/: messaging.rs
storage/: .gitignore  README.md
storage/api/: Cargo.toml
storage/api/src/: contracts.rs  events.rs  main.rs
storage/common/: Cargo.toml
storage/common/migrations/20221221121300_create_contract_table/: up.sql
storage/common/migrations/20221229124240_create_events_table/: up.sql
storage/common/src/: lib.rs  models.rs  schema.rs
storage/reader/: Cargo.toml
storage/reader/src/: lib.rs
storage/writer/: Cargo.toml
storage/writer/src/: lib.rs
wallet/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html
wallet/docker/: .env.template  docker-compose.yml
wallet/docs/: wallet.yaml
wallet/src/: macros.rs  main.rs  oracle_client.rs  utils.rs
wallet/src/storage/: memory_storage.rs  mod.rs  storage_api.rs  storage_provider.rs  utils.rs
wallet/static/: accept.html
