[package]
name = "oracle-discovery"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oracle-discovery"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"
config = "0.13.1"
log = "0.4.17"
env_logger = "0.9.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
dlc-clients = { path = "../clients" }
