[package]
edition = "2021"
name = "dlc-link-backend"
version = "0.1.0"

[[bin]]
name = "dlc-link-backend"
path = "src/main.rs"

[dependencies]
base64 = "0.13.1"
bitcoin-rpc-provider = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug"}
bitcoincore-rpc = {version = "0.13.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "dlc-version"}
bitcoincore-rpc-json = {version = "0.13.0", git = "https://github.com/p2pderivatives/rust-bitcoincore-rpc", branch = "dlc-version"}
chrono = {version = "0.4.19", features = ["serde"]}
dlc = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug", features = ["use-serde"]}
dlc-manager = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug", features = ["use-serde"]}
dlc-messages = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug", features = ["use-serde"]}
dlc-trie = { git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug", features = ["use-serde"]}
dlc-sled-storage-provider = {version = "0.1.0", git = "https://github.com/p2pderivatives/rust-dlc", branch = "fix/3.0.0-collateral-bug"}
env_logger = "0.9.0"
lightning = {version = "0.0.106"}
hex = "0.4"
log = "0.4.17"
reqwest = {version = "0.11", features = ["blocking", "json", "rustls-tls"]}
dlc-clients = { path = "../clients" }
rouille = {version = "3.5.0"}
serde = {version = "*", features = ["derive"]}
serde_json = "1.0.81"
secp256k1-zkp = {version = "0.5.0", features = ["bitcoin_hashes", "rand", "rand-std"]}
sled = "0.34"
tokio = "1.23.0"
# tokio = {version = "1", features = ["full"]}
warp = "0.3"

[dev-dependencies]
mockito = "0.30.0"
