[package]
name = "dlc-storage-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storage-api"
path = "src/main.rs"

[dependencies]
dlc-storage-common = { path = "../common" }
dlc-storage-reader = { path = "../reader" }
dlc-storage-writer = { path = "../writer" }
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
env_logger = "0.9.0"
log = "0.4.17"
