[package]
name = "dlc-storage-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
